--- a/login.ipynb
+++ b/login.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc6e50a9-035e-4649-848e-ea080709ef39",
+   "id": "274daccc-106c-43f9-91c5-737d68c8d813",
    "metadata": {},
    "outputs": [
     {
@@ -21,58 +21,90 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [18/Apr/2025 11:20:02] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [18/Apr/2025 11:20:02] \"GET /static/css/adjustment2.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [18/Apr/2025 11:20:02] \"GET /static/images/logo.png HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [18/Apr/2025 11:20:02] \"GET /static/images/Designer%201.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [18/Apr/2025 11:20:03] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [18/Apr/2025 11:20:25] \"POST /login HTTP/1.1\" 302 -\n",
-      "127.0.0.1 - - [18/Apr/2025 11:20:25] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [18/Apr/2025 11:20:25] \"GET /static/css/adjustment2.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [18/Apr/2025 11:20:25] \"GET /static/images/logo.png HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [18/Apr/2025 11:20:50] \"POST /login HTTP/1.1\" 302 -\n"
+      "127.0.0.1 - - [07/Jun/2025 18:42:11] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [07/Jun/2025 18:42:11] \"GET /static/css/adjustment2.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [07/Jun/2025 18:42:11] \"GET /static/images/logo.png HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [07/Jun/2025 18:42:11] \"GET /static/images/Designer1.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [07/Jun/2025 18:42:20] \"POST /login HTTP/1.1\" 302 -\n",
+      "127.0.0.1 - - [07/Jun/2025 18:42:22] \"GET /interaction HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [07/Jun/2025 18:42:22] \"GET /static/images/logo.png HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [07/Jun/2025 18:42:22] \"GET /static/css/adjustment2.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [07/Jun/2025 18:42:22] \"GET /static/images/profile.jpeg HTTP/1.1\" 304 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query result: ('bsbhavesh1975@gmail.com', 'bhavesh shah', '@bhavesh1975', None)\n"
+      "🚨 Error: ufunc 'isnan' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [18/Apr/2025 11:21:13] \"GET /interaction HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [18/Apr/2025 11:21:14] \"GET /static/css/adjustment2.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [18/Apr/2025 11:21:14] \"GET /static/images/logo.png HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [18/Apr/2025 11:21:14] \"GET /static/images/profile.jpeg HTTP/1.1\" 304 -\n"
+      "127.0.0.1 - - [07/Jun/2025 18:42:53] \"POST /house_data HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [07/Jun/2025 18:42:53] \"GET /static/css/adjustment2.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [07/Jun/2025 18:42:53] \"GET /static/images/logo.png HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [07/Jun/2025 18:42:53] \"GET /static/images/profile.jpeg HTTP/1.1\" 304 -\n"
      ]
     }
    ],
    "source": [
     "from flask import Flask, render_template, request, redirect, url_for, flash, session\n",
     "import mysql.connector\n",
+    "import joblib\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the trained model pipeline (with preprocessing included)\n",
+    "model = joblib.load('xgb_model.pkl')\n",
     "\n",
     "app = Flask(__name__)\n",
-    "app.secret_key = \"Shree\"  # Ensure this is unique for session management\n",
+    "app.secret_key = \"Shree\"\n",
     "\n",
     "def get_connection():\n",
     "    return mysql.connector.connect(\n",
-    "        host='mydbinstance.cpkukqi8wb7l.eu-north-1.rds.amazonaws.com',\n",
+    "        host='mydb-instance.c1qcga28q7o6.eu-north-1.rds.amazonaws.com',\n",
     "        port=3306,\n",
     "        user='Bhavesh',\n",
     "        password='bhavesh1975',\n",
     "        database='Dream_House_Valuation',\n",
-    "        connection_timeout=10\n",
+    "        connection_timeout=60\n",
     "    )\n",
     "\n",
-    "# Create table if not exists\n",
     "def setup_database():\n",
     "    connection = get_connection()\n",
     "    cursor = connection.cursor()\n",
-    "    cursor.execute(\"CREATE TABLE IF NOT EXISTS registers (Email VARCHAR(70), Full_Name CHAR(70), mobile VARCHAR(15), password VARCHAR(20))\")\n",
+    "    cursor.execute(\"\"\"\n",
+    "        CREATE TABLE IF NOT EXISTS registers (\n",
+    "            Email VARCHAR(70) PRIMARY KEY,\n",
+    "            Full_Name CHAR(70),\n",
+    "            mobile VARCHAR(15),\n",
+    "            password VARCHAR(20)\n",
+    "        )\n",
+    "    \"\"\")\n",
+    "    cursor.execute(\"\"\"\n",
+    "        CREATE TABLE IF NOT EXISTS house_data (\n",
+    "            Email VARCHAR(100),\n",
+    "            City VARCHAR(100),\n",
+    "            square_feet FLOAT,\n",
+    "            Bedroom INT,\n",
+    "            Property_type VARCHAR(40),\n",
+    "            Furnished VARCHAR(40),\n",
+    "            Year_Built INT,\n",
+    "            Floor_No INT,\n",
+    "            Age_of_Property INT,\n",
+    "            Nearby_Schools INT,\n",
+    "            Nearby_Hospitals INT,\n",
+    "            Public_Transport_Accessibility VARCHAR(10),\n",
+    "            Parking_Space BOOLEAN,\n",
+    "            Security BOOLEAN,\n",
+    "            Amenities VARCHAR(10),\n",
+    "            Facing VARCHAR(20),\n",
+    "            Owner_Type VARCHAR(40)\n",
+    "        )\n",
+    "    \"\"\")\n",
     "    connection.commit()\n",
     "    cursor.close()\n",
     "    connection.close()\n",
@@ -88,25 +120,104 @@
     "    if 'user_email' not in session:\n",
     "        flash(\"Please log in first.\")\n",
     "        return redirect(url_for('home'))\n",
+    "    user_info = get_user_info(session['user_email'])\n",
+    "    return render_template('interaction2.html', user=user_info)\n",
     "\n",
-    "    email = session['user_email']\n",
-    "\n",
-    "    connection = get_connection()\n",
-    "    cursor = connection.cursor()\n",
-    "    cursor.execute(\"SELECT Full_Name, Email FROM registers WHERE Email = %s\", (email,))\n",
-    "    user = cursor.fetchone()\n",
-    "    cursor.close()\n",
-    "    connection.close()\n",
-    "\n",
-    "    if user:\n",
-    "        user_info = {\n",
-    "            'name': user[0],\n",
-    "            'email': user[1]\n",
-    "        }\n",
-    "        return render_template('interaction2.html', user=user_info)\n",
-    "    else:\n",
-    "        flash(\"User not found.\")\n",
+    "@app.route('/house_data', methods=['POST'])\n",
+    "def house_data():\n",
+    "    if 'user_email' not in session:\n",
+    "        flash(\"Please log in first.\")\n",
     "        return redirect(url_for('home'))\n",
+    "\n",
+    "    user_email = session['user_email']\n",
+    "\n",
+    "    try:\n",
+    "        form = request.form\n",
+    "        input_data = {\n",
+    "            'City': form.get('city', '').strip(),\n",
+    "            'Property_Type': form.get('property_type', '').strip(),\n",
+    "            'BHK': int(form.get('bedroom', 0)),\n",
+    "            'Furnished_Status': form.get('furnished', '').strip(),\n",
+    "            'Size_in_SqFt': float(form.get('square_feet', 0)),\n",
+    "            'Year_Built': int(form.get('year_built', 0)),\n",
+    "            'Floor_No': int(form.get('floor_no', 0)),\n",
+    "            'Age_of_Property': int(form.get('age_of_property', 0)),\n",
+    "            'Nearby_Schools': int(form.get('nearby_schools', 0)),\n",
+    "            'Nearby_Hospitals': int(form.get('nearby_hospitals', 0)),\n",
+    "            'Public_Transport_Accessibility': form.get('public_transport_accessibility', '').capitalize().strip(),\n",
+    "            'Parking_Space': 1 if form.get('parking_space', '').lower() == 'yes' else 0,\n",
+    "            'Security': 1 if form.get('security', '').lower() == 'yes' else 0,\n",
+    "            'Amenities': form.get('amenities', '').strip(),  # treat as string categorical\n",
+    "            'Facing': form.get('facing', '').strip(),\n",
+    "            'Owner_Type': form.get('owner_type', '').strip()\n",
+    "        }\n",
+    "\n",
+    "        # Store in DB\n",
+    "        connection = get_connection()\n",
+    "        cursor = connection.cursor()\n",
+    "        cursor.execute('''\n",
+    "            INSERT INTO house_data (\n",
+    "                Email, City, square_feet, Bedroom, Property_type, Furnished,\n",
+    "                Year_Built, Floor_No, Age_of_Property, Nearby_Schools, Nearby_Hospitals,\n",
+    "                Public_Transport_Accessibility, Parking_Space, Security, Amenities,\n",
+    "                Facing, Owner_Type\n",
+    "            ) VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
+    "        ''', (\n",
+    "            user_email, input_data['City'], input_data['Size_in_SqFt'], input_data['BHK'],\n",
+    "            input_data['Property_Type'], input_data['Furnished_Status'],\n",
+    "            input_data['Year_Built'], input_data['Floor_No'], input_data['Age_of_Property'],\n",
+    "            input_data['Nearby_Schools'], input_data['Nearby_Hospitals'],\n",
+    "            input_data['Public_Transport_Accessibility'], input_data['Parking_Space'],\n",
+    "            input_data['Security'], input_data['Amenities'], input_data['Facing'],\n",
+    "            input_data['Owner_Type']\n",
+    "        ))\n",
+    "        connection.commit()\n",
+    "\n",
+    "        # Prepare DataFrame for prediction\n",
+    "        input_df = pd.DataFrame([input_data])\n",
+    "\n",
+    "        # Define categorical and numerical features exactly as model expects\n",
+    "        categorical_features = [\n",
+    "            'City', 'Property_Type', 'Furnished_Status',\n",
+    "            'Public_Transport_Accessibility', 'Amenities', 'Facing', 'Owner_Type'\n",
+    "        ]\n",
+    "        numerical_features = [\n",
+    "            'BHK', 'Size_in_SqFt', 'Year_Built', 'Floor_No',\n",
+    "            'Age_of_Property', 'Nearby_Schools', 'Nearby_Hospitals',\n",
+    "            'Parking_Space', 'Security'\n",
+    "        ]\n",
+    "\n",
+    "        # Convert types correctly\n",
+    "        for col in categorical_features:\n",
+    "            input_df[col] = input_df[col].astype(str)\n",
+    "        for col in numerical_features:\n",
+    "            input_df[col] = pd.to_numeric(input_df[col], errors='coerce')\n",
+    "\n",
+    "        # Check for missing numeric values after conversion\n",
+    "        for col in numerical_features:\n",
+    "            if input_df[col].isnull().any():\n",
+    "                raise ValueError(f\"Invalid or missing numeric input for '{col}'.\")\n",
+    "\n",
+    "        # Predict using the loaded model pipeline\n",
+    "        log_price_pred = model.predict(input_df)[0]\n",
+    "        price_pred = np.expm1(log_price_pred)\n",
+    "\n",
+    "        user_info = get_user_info(user_email)\n",
+    "        return render_template('interaction2.html', user=user_info, predicted_price=round(price_pred, 2))\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"🚨 Error: {e}\")\n",
+    "        user_info = get_user_info(user_email)\n",
+    "        return render_template('interaction2.html', user=user_info, error=str(e))\n",
+    "\n",
+    "    finally:\n",
+    "        if 'cursor' in locals():\n",
+    "            cursor.close()\n",
+    "        if 'connection' in locals():\n",
+    "            connection.close()\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "@app.route('/register', methods=['POST'])\n",
     "def register():\n",
@@ -132,48 +243,31 @@
     "    except Exception as e:\n",
     "        flash(f\"Error: {e}\")\n",
     "    finally:\n",
-    "        if cursor:\n",
-    "            cursor.close()\n",
-    "        if connection:\n",
-    "            connection.close()\n",
+    "        cursor.close()\n",
+    "        connection.close()\n",
     "\n",
     "    return redirect(url_for('home'))\n",
-    "\n",
     "\n",
     "@app.route('/login', methods=['POST'])\n",
     "def login():\n",
     "    email = request.form['email']\n",
     "    password = request.form['password']\n",
     "\n",
-    "    connection = None\n",
-    "    cursor = None\n",
-    "    result = None\n",
-    "\n",
     "    try:\n",
     "        connection = get_connection()\n",
     "        cursor = connection.cursor()\n",
     "        cursor.execute(\"SELECT * FROM registers WHERE Email = %s AND password = %s\", (email, password))\n",
     "        result = cursor.fetchone()\n",
-    "\n",
-    "        print(f\"Query result: {result}\")  # Debugging line to check if the query is returning expected data\n",
     "    except Exception as e:\n",
     "        flash(f\"Error: {e}\")\n",
     "        return redirect(url_for('home'))\n",
     "    finally:\n",
-    "        if cursor:\n",
-    "            try:\n",
-    "                cursor.close()\n",
-    "            except Exception as e:\n",
-    "                print(f\"Cursor close error: {e}\")\n",
-    "        if connection:\n",
-    "            try:\n",
-    "                connection.close()\n",
-    "            except Exception as e:\n",
-    "                print(f\"Connection close error: {e}\")\n",
+    "        cursor.close()\n",
+    "        connection.close()\n",
     "\n",
     "    if result:\n",
-    "        session['user_email'] = result[0]  # Assuming Email is at index 0 in result\n",
-    "        flash(f\"Welcome {result[1]}\")  # Assuming Full_Name is at index 1\n",
+    "        session['user_email'] = result[0]\n",
+    "        flash(f\"Welcome {result[1]}\")\n",
     "        return redirect(url_for('interaction'))\n",
     "    else:\n",
     "        flash(\"Invalid email or password.\")\n",
@@ -185,6 +279,40 @@
     "    flash(\"Logged out successfully.\")\n",
     "    return redirect(url_for('home'))\n",
     "\n",
+    "@app.route('/history')\n",
+    "def history():\n",
+    "    if 'user_email' not in session:\n",
+    "        flash(\"Please log in first.\")\n",
+    "        return redirect(url_for('home'))\n",
+    "\n",
+    "    user_email = session['user_email']\n",
+    "    connection = get_connection()\n",
+    "    cursor = connection.cursor()\n",
+    "\n",
+    "    cursor.execute('''\n",
+    "        SELECT City, square_feet, Bedroom, Property_type, Furnished,\n",
+    "               Year_Built, Floor_No, Age_of_Property, Nearby_Schools, Nearby_Hospitals,\n",
+    "               Public_Transport_Accessibility, Parking_Space, Security, Amenities,\n",
+    "               Facing, Owner_Type FROM house_data WHERE Email = %s\n",
+    "    ''', (user_email,))\n",
+    "    data = cursor.fetchall()\n",
+    "\n",
+    "    cursor.close()\n",
+    "    connection.close()\n",
+    "\n",
+    "    user_info = get_user_info(user_email)\n",
+    "    return render_template('history.html', data=data, user=user_info)\n",
+    "\n",
+    "def get_user_info(email):\n",
+    "    try:\n",
+    "        connection = get_connection()\n",
+    "        cursor = connection.cursor()\n",
+    "        cursor.execute(\"SELECT Full_Name, Email FROM registers WHERE Email = %s\", (email,))\n",
+    "        user = cursor.fetchone()\n",
+    "        return {'name': user[0], 'email': user[1]} if user else None\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        connection.close()\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run(debug=True, use_reloader=False)\n"
@@ -193,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "213d55a5-00f7-4407-90f7-178b27f61e49",
+   "id": "9fc59d05-93f1-4392-ab32-e5cb3c2d7bf9",
    "metadata": {},
    "outputs": [],
    "source": []
